- Fix combobox filtering in combinationModInfo.jsp - Code clean up and comments added.