@@ -3,6 +3,7 @@ package org.labkey.panoramapublic.query.modification;
 import org.labkey.api.util.Pair;
 import org.labkey.panoramapublic.model.DbEntity;
 
+import java.util.Collections;
 import java.util.List;
 
 public class ExperimentModInfo extends DbEntity
@@ -54,12 +55,12 @@ public class ExperimentModInfo extends DbEntity
 
     public List<Integer> getUnimodIds()
     {
-        return List.of(_unimodId);
+        return Collections.singletonList(_unimodId);
     }
 
     public List<Pair<Integer, String>> getUnimodIdsAndNames()
     {
-        return List.of(new Pair(_unimodId, _unimodName));
+        return Collections.singletonList(new Pair<>(_unimodId, _unimodName));
     }
 
     public boolean isCombinationMod()
